Fixed collapsible navigation bar alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,7 @@ nav.collapsible a.toggle
     float: none;
     display: block;
     padding-left: 0;
+    text-align: left;
   }
   nav.collapsible.responsive a.toggle
   {
